# axum-demo

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust.yml
benches/: benchmarks.rs
examples/: client.rs  index.html  prompts.json  serviceWorker.js  site.webmanifest  websocket.rs
examples/_next/static/chunks/: 0c517a46.f893ef2eadab0e44.js  514.48045787c3b7e8af.js  568.ac861a16af7e0c67.js  602.66ec1c2070527132.js  608-207bdf85cf03a630.js  80c5adb7.f222a64f28814c6e.js  825.34f2cfdffd7ee306.js  928.823c8086b6f87f23.js  961-1d992a61c1d92aac.js  cbb4fb59.63d596a9729a0e40.js  main-app-28fbf857b0077cf6.js  webpack-1e76f27c5b65fd48.js
examples/_next/static/chunks/app/: page-9194359e57a48634.js
examples/_next/static/css/: 22e84ac26f9b7cff.css  6c1a9c450f119504.css  8eefcb569383dbc5.css  9ab25e353d735236.css
src/: cli.rs  client.rs  lib.rs  main.rs  router.rs
src/cli/: cli.rs  client.rs  mod.rs
src/cli/codec/: decoder.rs  encoder.rs  mod.rs
src/cli/service/: handler.rs
src/db/: db.rs  mod.rs
src/error/: error.rs  mod.rs
src/logger/: mod.rs
src/middleware/: auth.rs  cors.rs  jwt.rs  mod.rs  my_middleware.rs  user_agent.rs
src/response/: response.rs
src/router/: mod.rs  router.rs
src/service/: article.rs  country.rs  download.rs  mod.rs  user.rs
src/test/: client.rs
src/util/: hash.rs  uuid.rs
src/yew/: list1.rs  mod.rs
tests/: client.rs
