[package]
name = "axum-demo"
version = "0.2.0"
edition = "2021"

#[[bin]]
#name = "haha"
#path = "src/main.rs"

[lib]
#name = "dd"
#path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#[dependencies.demo2]
#path = "../demo2"

#[dependencies.mio]
#version = "0.8.5"

#[dependencies.libc]
#version = "0.2.139"

#[dependencies.yew]
#version = "0.20.0"

#[dependencies.mongodb]
#version = "2.3.1"

#[dependencies.tracing]
#version = "0.1.37"

#[dependencies.tracing-subscriber]
#version = "0.3.16"
#features = ["env-filter","json","local-time"]

#[dependencies.tracing-appender]
#version = "0.2.2"

[dependencies.diesel]
version = "2.1.4"
features = ["mysql","chrono"]

[dependencies.failure]
version = "0.1.8"

[dependencies.clap]
version = "4.1.4"

[dependencies.hex]
version = "0.4.3"

[dependencies.axum]
version = "0.7.1"

[dependencies.http-body]
version = "1.0.0"

[dependencies.tower]
version = "0.4.0"

[dependencies.tower-http]
version = "0.5.0"
features= ["trace","cors"]

[dependencies.async-trait]
version = "0.1.63"

[dependencies.digest]
version = "0.10.6"

[dependencies.sled]
version = "0.34.7"

[dependencies.serde]
version = "1.0.167"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.100"

[dependencies.tokio]
version = "1.29.1"
features = ["full"]

[dependencies.futures]
version = "0.3.25"

[dependencies.reqwest]
version = "0.11.18"
default-features = false
features = ["json","rustls-tls"]

[dependencies.env_logger]
version = "0.10.0"

[dependencies.time]
version = "0.3.17"

[dependencies.log]
version = "0.4.19"
features = ["kv_unstable_serde"]

[dependencies.chrono]
version = "0.4.23"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.num_enum]
version = "0.6.0"

[dependencies.bytes]
version = "1.4.0"
features = ["serde"]

[dependencies.jsonwebtoken]
version = "8.3.0"

[dependencies.tungstenite]
version = "0.20.1"

# test测试构建使用 cargo build不会使用此依赖包
[dev-dependencies.hmac-sha256]
version = "1.1.6"

[dev-dependencies.serde_repr]
version = "0.1.10"

[profile.dev]
#opt-level = 2

[profile.release]
#opt-level = 3 #编译等级 默认是3 性能好，构建时间长
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*